# rai-pal

./: .eslintrc  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  deploy.ps1  eslint.config.mjs  index.html  package-lock.json  package.json  panda.config.ts  pnpm-lock.yaml  postcss.config.mjs  publish.ps1  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
backend/: .gitignore  .rustfmt.toml  Cargo.toml  rust-toolchain.toml  tauri.conf.json
backend/capabilities/: main.json
backend/core/: Cargo.toml
backend/core/src/: analytics.rs  architecture.rs  debug.rs  discord_oauth.rs  files.rs  game.rs  game_executable.rs  game_mod.rs  game_subscription.rs  game_tag.rs  game_title.rs  games_query.rs  http.rs  http_client.rs  installed_game.rs  lib.rs  local_database.rs  local_mod.rs  maps.rs  mod_manifest.rs  owned_game.rs  paths.rs  remote_config.rs  remote_game.rs  remote_games.rs  remote_mod.rs  result.rs  string_includes.rs  tests.rs  windows.rs
backend/core/src/data_types/: json_data.rs  mod.rs  path_data.rs
backend/core/src/game_engines/: game_engine.rs  unity.rs  unreal.rs
backend/core/src/mod_loaders/: bepinex.rs  mod_database.rs  mod_loader.rs  runnable_loader.rs
backend/core/src/providers/: epic_provider.rs  gog_provider.rs  heroic_epic_provider.rs  heroic_gog_provider.rs  itch_provider.rs  manual_provider.rs  mod.rs  provider.rs  provider_cache.rs  provider_command.rs  steam_provider.rs  ubisoft_provider.rs  xbox_provider.rs
backend/core/src/providers/steam/: appinfo.rs  mod.rs  packageinfo.rs  steam_provider.rs  vdf.rs
backend/core/src/steam/: appinfo.rs  mod.rs  vdf.rs
backend/core/src/user/: discord_oauth.rs  mod.rs  user_socket.rs
backend/icons/: icon.icns
backend/proc-macros/: Cargo.toml
backend/proc-macros/src/: lib.rs
backend/rai-pal-core/: Cargo.toml
backend/rai-pal-core/src/: app_state.rs  app_type.rs  game_database.rs  game_executable.rs  game_tag.rs  game_title.rs  installed_game.rs  lib.rs  local_mod.rs  maps.rs  owned_game.rs  paths.rs  pc_gaming_wiki.rs  remote_game.rs  remote_games.rs  result.rs  tests.rs  windows.rs
backend/rai-pal-core/src/game_engines/: game_engine.rs  unity.rs  unreal.rs
backend/rai-pal-core/src/mod_loaders/: bepinex.rs  mod.rs  mod_database.rs  mod_loader.rs  runnable_loader.rs
backend/rai-pal-core/src/providers/: epic_provider.rs  gog_provider.rs  itch_provider.rs  manual_provider.rs  mod.rs  provider.rs  provider_command.rs  steam_provider.rs  ubisoft_provider.rs  xbox_provider.rs
backend/rai-pal-core/src/steam/: appinfo.rs  id_lists.rs  mod.rs
backend/resources/bepinex/Il2Cpp/: doorstop_config.ini
backend/resources/bepinex/Il2Cpp/Windows/X86/mod-files/BepInEx/core/: BepInEx.Core.xml
backend/resources/bepinex/Mono/: doorstop_config.ini
backend/resources/bepinex/Mono/Windows/X64/mod-files/BepInEx/core/: MonoMod.Utils.xml
backend/resources/bepinex/Mono/mods/RuntimeUnityEditor/: README.md
backend/resources/bepinex/config/: BepInEx-legacy.cfg
backend/resources/bepinex/il2cpp/: doorstop_config.ini
backend/resources/bepinex/il2cpp/windows/x64/mod-files/BepInEx/core/: BepInEx.Preloader.Core.xml
backend/resources/bepinex/il2cpp/windows/x86/mod-files/mono/MonoBleedingEdge/etc/mono/: config
backend/resources/bepinex/mono/linux/mod-files/doorstop_libs/: libdoorstop_x64.dylib  libdoorstop_x86.dylib
backend/resources/bepinex/mono/mods/RuntimeUnityEditor/: RuntimeUnityEditor.Bepin5.xml  RuntimeUnityEditor.Core.xml
backend/resources/bepinex/mono/windows/x64/mod-files/BepInEx/core/: 0Harmony.xml
backend/resources/bepinex/mono/windows/x86/mod-files/BepInEx/core/: BepInEx.xml
backend/resources/uevr/: place_uevr_files_here.txt
backend/src/: analytics.rs  app_cache.rs  app_state.rs  appinfo.rs  bepinex.rs  events.rs  files.rs  game.rs  game_executable.rs  game_mod.rs  game_mode.rs  installed_game.rs  local_mod.rs  main.rs  maps.rs  mod.rs  mod_loader.rs  mod_manifest.rs  native_dialog.rs  operating_systems.rs  owned_game.rs  paths.rs  pc_gaming_wiki.rs  remote_game.rs  remote_mod.rs  result.rs  steam_game.rs  steam_games.rs  steam_owned_unity_games.rs  windows.rs
backend/src/game_engines/: game_engine.rs  mod.rs  unity.rs  unreal.rs
backend/src/macros/: mod.rs  serializable_enum.rs  serializable_struct.rs  set_up_api.rs  set_up_tauri.rs
backend/src/mod_loaders/: bepinex.rs  melon_loader.rs  mod.rs  mod_database.rs  mod_loader.rs  runnable_loader.rs  uevr.rs  unreal_vr.rs
backend/src/providers/: epic_provider.rs  gog_provider.rs  itch_provider.rs  manual_provider.rs  mod.rs  provider.rs  provider_command.rs  steam_provider.rs  xbox_provider.rs
backend/src/providers/steam_provider/: mod.rs
backend/src/steam/: appinfo.rs  command.rs  discover_games.rs  id_lists.rs  ids_by_engine.rs  installed_games.rs  mod.rs  owned_games.rs  thumbnail.rs
backend/tauri-app/: Cargo.toml  Tauri.toml  tauri.conf.json
backend/tauri-app/capabilities/: main.json
backend/tauri-app/resources/bepinex/Il2Cpp/: doorstop_config.ini
backend/tauri-app/resources/bepinex/Mono/: doorstop_config.ini
backend/tauri-app/resources/bepinex/config/: BepInEx.cfg
backend/tauri-app/src/: app_settings.rs  app_state.rs  events.rs  main.rs  result.rs  typescript.rs
changelogs/: README.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.22.md  v0.1.24.md  v0.1.25.md  v0.1.26.md  v0.1.28.md  v0.1.29.md  v0.1.4.md  v0.1.5.md  v0.1.7.md  v0.1.8.md  v0.10.1.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.12.1.md  v0.13.1.md  v0.14.0.md  v0.15.2.md  v0.16.1.md  v0.17.0.md  v0.17.1.md  v0.18.1.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.3.1.md  v0.3.3.md  v0.3.5.md  v0.3.6.md  (+14 more)
docs/: _config.yml  index.md
frontend/: app.css.ts  app.tsx  global.css  main.tsx  pages.tsx  prevent-events.ts  register-events.ts  theme.ts
scripts/: collect-build-artifacts.js  create-release-build.ps1  generate-release-body.js  generate-updater-json.js  get-version.js  merge-updater-json.js  pre-release.js  prepare-build-for-release.ps1  (+1 more)
src/: App.tsx  (+6 more)
(+223 files in other folders)
