[workspace]
members = ["proc-macros", "rai-pal-core", "tauri-app"]

[workspace.package]
version = "0.13.0"
authors = ["Raicuparta"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Raicuparta/rai-pal"
edition = "2021"

[workspace.dependencies]
log = "0.4.22"
rai-pal-core = { path = "./rai-pal-core" }
rai-pal-proc-macros = { path = "./proc-macros" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
specta = "2.0.0-rc.20"
tauri-specta = { version = "2.0.0-rc.18", features = ["derive", "typescript"] }
thiserror = "1.0.63"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
debug = 0
strip = "debuginfo"


[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }

# Restriction level lints:
as_conversions = "warn"
as_underscore = "warn"
box_collection = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
expect_used = "warn"
shadow_unrelated = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# Pedantic level lints:
too_many_lines = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
