[workspace]
members = ["proc-macros", "core", "tauri-app"]
resolver = "2"

[workspace.package]
version = "0.15.2"
authors = ["Raicuparta"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Raicuparta/rai-pal"
edition = "2024"

[workspace.dependencies]
log = "0.4.26"
rai-pal-core = { path = "./core" }
rai-pal-proc-macros = { path = "./proc-macros" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2.0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
strum = { version = "0.27", features = ["derive"] }

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
debug = 0
strip = "debuginfo"


[workspace.lints.clippy]
# Categories that have mostly useful lints.
# Priority is -1 so that they get overridden by priority 0 lints.
# If Clippy gets updated with new rules on these categories, they get automatically applied.
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to override. Priority defaults to 0.
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Restriction rules are too restrictive, so we allow by default.
restriction = { level = "allow", priority = -1 }

# Restriction rules to override. Priority defaults to 0.
as_conversions = "warn"
as_underscore = "warn"
box_collection = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
expect_used = "warn"
shadow_unrelated = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
