[package]
name = "rai-pal-core"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
log.workspace = true
rai-pal-proc-macros.workspace = true
serde_json.workspace = true
serde.workspace = true
specta.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
strum.workspace = true

open = "5.3.2"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
directories = "6.0.0"
enum_dispatch = "0.3.13"
globwalk = "0.9.1"
lazy-regex = "3.4.1"
pelite = { version = "0.10.0", features = ["std"], default-features = false }
reqwest = { version = "0.12.22", features = [
  "json",
  "gzip", # We have some large JSONs in the Rai Pal Database, so gzip is useful.
] }
serde_urlencoded = "0.7.1"
steamlocate = "2.0.1"
unicode-normalization = "0.1.24"
uuid = { version = "1.17.0", features = ["v4"] }
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
paths-as-strings = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
winreg = "0.55.0"

[lints]
workspace = true
