[package]
name = "rai-pal-core"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
log.workspace = true
rai-pal-proc-macros.workspace = true
serde_json.workspace = true
serde.workspace = true
specta.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
strum.workspace = true

open = "5.3.3"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
directories = "6.0.0"
enum_dispatch = "0.3.13"
globwalk = "0.9.1"
lazy-regex = "3.6.0"
pelite = { version = "0.10.0", features = ["std"], default-features = false }
reqwest = { version = "0.13.2", features = [
  "json",
  "gzip", # We have some large JSONs in the Rai Pal Database, so gzip is useful.
] }
serde_urlencoded = "0.7.1"
steamlocate = "2.1.0"
unicode-normalization = "0.1.25"
uuid = { version = "1.23.0", features = ["v4"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
paths-as-strings = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
winreg = "0.56.0"

[lints]
workspace = true
