[package]
name = "rai-pal-core"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
futures.workspace = true
log.workspace = true
open.workspace = true
rai-pal-proc-macros.workspace = true
serde_json.workspace = true
serde.workspace = true
specta.workspace = true
tauri-specta.workspace = true
thiserror.workspace = true
tokio.workspace = true

async-trait = "0.1.74"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = "0.4.31"
directories = "5.0.1"
enum_dispatch = "0.3.12"
globwalk = "0.9.1"
goblin = "0.8.2"
lazy_static = "1.4.0"
lazy-regex = "3.0.2"
pelite = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_urlencoded = "0.7.1"
steamlocate = "2.0.0-beta.2"
uuid = { version = "1.8.0", features = ["v4"] }
zip = "0.6.6"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.1"
webview2-com = "0.31.0" # Needed for getting the webview window on linux

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
winreg = "0.52.0"

[lints]
workspace = true
