[package]
name = "rai-pal-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
log.workspace = true
rai-pal-core.workspace = true
rai-pal-proc-macros.workspace = true
serde_json.workspace = true
serde.workspace = true
specta.workspace = true
tauri-specta.workspace = true
thiserror.workspace = true
open.workspace = true

specta-typescript = "0.0.7"
tauri = { version = "=2.0.0-rc.15", features = [] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-window-state = "2.0.0-rc"
tauri-runtime = "2.0.0-rc"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
